@@ -1,6 +1,7 @@
 *** WooCommerce Payments Changelog ***
 
 = 3.7.0 - 2022-xx-xx =
+* Add - Link to customer in disputes list
 * Update - Bump minimum required version of WordPress from 5.6 to 5.7.
 * Update - Bump minimum required version of WooCommerce from 4.5 to 4.6.
 * Add - Introduce sorting on disputes page.
